2012-02-25  Nikolas Zimmermann  <nzimmermann@rim.com>

        Unreviewed, rolling out r108557.
        http://trac.webkit.org/changeset/108557
        https://bugs.webkit.org/show_bug.cgi?id=77705

        Broke svg/zoom/page/zoom-replated-intrinsic-ratio-001.htm.

        * rendering/RenderTableCell.cpp:
        * rendering/RenderTableCell.h:
        (RenderTableCell):
        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::calcRowLogicalHeight):

2012-02-25  Andreas Kling  <awesomekling@apple.com>

        HTMLParamElement: Clean up name/value attribute handling.
        <http://webkit.org/b/79559>

        Reviewed by Anders Carlsson.

        Out-of-line name() and value(), and move the logic from parseAttribute()
        into them instead. This makes the class a bit simpler and shrinks it by
        two AtomicStrings. Also reduced isURLAttribute() to a two-liner.

        * html/HTMLParamElement.cpp:
        (WebCore::HTMLParamElement::name):
        (WebCore::HTMLParamElement::value):
        (WebCore::HTMLParamElement::isURLAttribute):
        * html/HTMLParamElement.h:

2012-02-24  Tien-Ren Chen  <trchen@chromium.org>

        [chromium] Replace RefPtr with OwnPtr for CCLayerImpl tree structure
        https://bugs.webkit.org/show_bug.cgi?id=78404

        Reviewed by James Robinson.

        No new tests. Updated existing test to reflect changes.

        * platform/graphics/chromium/CanvasLayerChromium.cpp:
        (WebCore::CanvasLayerChromium::createCCLayerImpl):
        * platform/graphics/chromium/CanvasLayerChromium.h:
        (CanvasLayerChromium):
        * platform/graphics/chromium/LayerChromium.cpp:
        (WebCore::LayerChromium::createCCLayerImpl):
        * platform/graphics/chromium/LayerChromium.h:
        (LayerChromium):
        * platform/graphics/chromium/PluginLayerChromium.cpp:
        (WebCore::PluginLayerChromium::createCCLayerImpl):
        * platform/graphics/chromium/PluginLayerChromium.h: